--- a/old/refer/OTHERS/roffbib.1
+++ b/old/refer/OTHERS/roffbib.1
@@ -1,11 +1,10 @@
-.\" Copyright (c) 1983, 1990 Regents of the University of California.
+.\" Copyright (c) 1983, 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)roffbib.1	6.4 (Berkeley) 03/14/91
+.\"	@(#)roffbib.1	6.5 (Berkeley) 04/18/91
 .\"
-.Vx
 .Vx
 .Dd 
 .Dt ROFFBIB 1
