--- a/old/refer/OTHERS/tmac.bib
+++ b/old/refer/OTHERS/tmac.bib
@@ -1,4 +1,7 @@
-...	@(#)tmac.bib	4.2	(Berkeley)	90/06/02
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)tmac.bib	4.3 (Berkeley) 04/18/91
+.\"
 .ds TL BIBLIOGRAPHY
 .ds // /usr/share/ms/
 .	\" HD - header macro
