--- a/old/tbl/tbl.1
+++ b/old/tbl/tbl.1
@@ -1,8 +1,6 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" %sccs.include.proprietary.roff%
 .\"
-.\"     @(#)tbl.1	6.2 (Berkeley) 06/24/90
+.\"	@(#)tbl.1	6.3 (Berkeley) 04/18/91
 .\"
 .TH TBL 1 "%Q"
 .AT 3
