--- a/usr.bin/touch/touch.1
+++ b/usr.bin/touch/touch.1
@@ -1,4 +1,9 @@
-.\"	@(#)touch.1	6.1 (Berkeley) 04/29/85
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)touch.1	6.2 (Berkeley) 04/18/91
 .\"
 .TH TOUCH 1 ""
 .AT 3
