--- a/usr.bin/tr/tr.1
+++ b/usr.bin/tr/tr.1
@@ -1,4 +1,9 @@
-.\"	@(#)tr.1	6.2 (Berkeley) 09/03/88
+.\" Copyright (c) 1988 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)tr.1	6.3 (Berkeley) 04/18/91
 .\"
 .TH TR 1 ""
 .AT 3
