--- a/usr.bin/true/true.1
+++ b/usr.bin/true/true.1
@@ -1,4 +1,9 @@
-.\"	@(#)true.1	6.1 (Berkeley) 04/29/85
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)true.1	6.2 (Berkeley) 04/18/91
 .\"
 .TH TRUE 1 ""
 .AT 3
