--- a/usr.bin/uniq/uniq.1
+++ b/usr.bin/uniq/uniq.1
@@ -1,4 +1,9 @@
-.\"	@(#)uniq.1	6.1 (Berkeley) 04/29/85
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)uniq.1	6.2 (Berkeley) 04/18/91
 .\"
 .TH UNIQ 1 ""
 .AT 3
