--- a/usr.bin/what/what.1
+++ b/usr.bin/what/what.1
@@ -1,8 +1,6 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" %sccs.include.proprietary.roff%
 .\"
-.\"	@(#)what.1	6.2 (Berkeley) 07/24/90
+.\"	@(#)what.1	6.3 (Berkeley) 04/18/91
 .\"
 .TH WHAT 1 ""
 .UC 4
