--- a/usr.bin/who/who.1
+++ b/usr.bin/who/who.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1990 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"     @(#)who.1	6.3 (Berkeley) 06/24/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)who.1	6.4 (Berkeley) 04/18/91
 .\"
 .TH WHO 1 "%Q"
 .AT 3
