--- a/usr.bin/yes/yes.1
+++ b/usr.bin/yes/yes.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)yes.1	6.2 (Berkeley) 01/09/88
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)yes.1	6.3 (Berkeley) 04/18/91
 .\"
 .TH YES 1 ""
 .UC 4
@@ -14,4 +15,7 @@ yes \- be repetitively affirmative
 .I expletive
 ]
 .SH DESCRIPTION
-\fIYes\fP outputs \fIexpletive\fP, or, by default, \*(lqy\*(rq, forever.
+.I Yes
+outputs
+.IR expletive ,
+or, by default, ``y'', forever.
