--- a/lib/libc/stdio/scanf.3
+++ b/lib/libc/stdio/scanf.3
@@ -5,7 +5,7 @@
 .\" Chris Torek.
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)scanf.3	6.7 (Berkeley) 04/19/91
+.\"     @(#)scanf.3	6.8 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt SCANF 3
@@ -160,7 +160,7 @@ The following conversions are available:
 .Bl -tag -width XXXX
 .It Cm %
 Matches a literal `%'.
-That is, `%%' in the format string
+That is, `%\&%' in the format string
 matches a single input `%' character.
 No conversion is done, and assignment does not occur.
 .It Cm d
