--- a/lib/libc/gen/isinf.3
+++ b/lib/libc/gen/isinf.3
@@ -1,9 +1,9 @@
-.\" Copyright (c) 1991, 1991 The Regents of the University of California.
+.\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)isinf.3	5.2 (Berkeley) 04/20/91
+.\"     @(#)isinf.3	5.3 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt ISINF 3
