--- a/lib/libm/common_source/lgamma.3
+++ b/lib/libm/common_source/lgamma.3
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1985 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)lgamma.3	6.2 (Berkeley) 05/12/86
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)lgamma.3	6.3 (Berkeley) 04/20/91
 .\"
 .TH LGAMMA 3M  ""
 .UC 6
