--- a/lib/libm/common_source/math.3
+++ b/lib/libm/common_source/math.3
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1985 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)math.3	6.8 (Berkeley) 05/27/86
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)math.3	6.9 (Berkeley) 04/20/91
 .\"
 .TH MATH 3 ""
 .UC 4
