--- a/sys/tahoe/stand/vdformat/vdformat.8
+++ b/sys/tahoe/stand/vdformat/vdformat.8
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1988 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)vdformat.8	5.1 (Berkeley) 03/27/88
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)vdformat.8	5.2 (Berkeley) 04/20/91
 .\"
 .TH VDFORMAT 8 ""
 .UC 4
