--- a/old/flcopy/flcopy.8
+++ b/old/flcopy/flcopy.8
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)flcopy.8	5.1 (Berkeley) 01/20/91
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)flcopy.8	5.2 (Berkeley) 04/20/91
 .\"
 .TH FLCOPY 8 ""
 .UC 4
