--- a/sbin/reboot/boot_hp300.8
+++ b/sbin/reboot/boot_hp300.8
@@ -7,7 +7,7 @@
 .\" Science Department.
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)boot_hp300.8	5.2 (Berkeley) 03/16/91
+.\"     @(#)boot_hp300.8	5.3 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt REBOOT 8
@@ -158,5 +158,5 @@ program to install boot blocks
 .Sh HISTORY
 The
 .Nm
-command
-.At
+command is
+.Ud .
