--- a/sbin/fsck/fsck.8
+++ b/sbin/fsck/fsck.8
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980, 1989 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)fsck.8	6.8 (Berkeley) 02/01/90
+.\" %sccs.include.redist.man%
+.\"
+.\"	@(#)fsck.8	6.9 (Berkeley) 04/20/91
 .\"
 .TH FSCK 8 ""
 .UC 4
