--- a/old/libndbm/ndbm.3
+++ b/old/libndbm/ndbm.3
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1985 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)ndbm.3	6.9 (Berkeley) 01/31/91
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)ndbm.3	6.10 (Berkeley) 04/20/91
 .\"
 .TH NDBM 3  ""
 .UC 6
