--- a/sbin/icheck/icheck.8
+++ b/sbin/icheck/icheck.8
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1988 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)icheck.8	6.3 (Berkeley) 06/24/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)icheck.8	6.4 (Berkeley) 04/20/91
 .\"
 .TH ICHECK 8 ""
 .UC 4
