--- a/share/man/man4/tty.4
+++ b/share/man/man4/tty.4
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)tty.4	6.8 (Berkeley) 02/24/89
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)tty.4	6.9 (Berkeley) 04/20/91
 .\"
 .TH TTY 4 ""
 .UC 4
