--- a/share/man/man7/term.7
+++ b/share/man/man7/term.7
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"     @(#)term.7	6.2 (Berkeley) 06/24/90
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)term.7	6.3 (Berkeley) 04/20/91
 .\"
 .Dd 
 .Dt TERM 7
