--- a/share/man/man8/man8.vax/crash.8
+++ b/share/man/man8/man8.vax/crash.8
@@ -1,11 +1,11 @@
-.\" Copyright (c) 1980, 1991 Regents of the University of California.
+.\" Copyright (c) 1980, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man
+.\" %sccs.include.redist.roff%
 .\"
-.\"	@(#)crash.8	6.4 (Berkeley) 04/20/91
+.\"	@(#)crash.8	6.5 (Berkeley) 04/20/91
 .\"
-.TH CRASH 8V ""
+.TH CRASH 8 ""
 .UC 4
 .SH NAME
 crash \- UNIX system failures
