--- a/share/man/man8/man8.vax/format.8
+++ b/share/man/man8/man8.vax/format.8
@@ -1,11 +1,11 @@
-.\" Copyright (c) 1980,1983 Regents of the University of California.
+.\" Copyright (c) 1980, 1983 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man
+.\" %sccs.include.redist.roff%
 .\"
-.\"	@(#)format.8	6.5 (Berkeley) 04/20/91
+.\"	@(#)format.8	6.6 (Berkeley) 04/20/91
 .\"
-.TH FORMAT 8V ""
+.TH FORMAT 8 ""
 .UC 4
 .SH NAME
 format \- how to format disk packs
