--- a/share/tmac/README
+++ b/share/tmac/README
@@ -1,9 +1,10 @@
-Copyright (c) 1990 The Regents of the University of California.
-All rights reserved.
-
-%sccs.include.redist.man%
-
-    @(#)README	5.1 (Berkeley) 03/07/91
+.\" Copyright (c) 1990 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)README	5.2 (Berkeley) 04/20/91
+.\"
 
 -mdoc stuff
 	doc-* files are unstripped tmac.doc-* files
