--- a/usr.sbin/cron/cron.8
+++ b/usr.sbin/cron/cron.8
@@ -1,4 +1,9 @@
-.\"	@(#)cron.8	6.6 (Berkeley) 06/24/90
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)cron.8	6.7 (Berkeley) 04/20/91
 .\"
 .TH CRON 8 ""
 .AT 3
