--- a/usr.sbin/iostat/iostat.8
+++ b/usr.sbin/iostat/iostat.8
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)iostat.8	6.2 (Berkeley) 06/22/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)iostat.8	6.3 (Berkeley) 04/20/91
 .\"
 .TH IOSTAT 8 ""
 .UC 4
