--- a/old/crypt/crypt.1
+++ b/old/crypt/crypt.1
@@ -1,4 +1,4 @@
-.\"	@(#)crypt.1	6.3 (Berkeley) 09/18/89
+.\"	@(#)crypt.1	6.4 (Berkeley) 04/22/91
 .\"
 .TH CRYPT 1 ""
 .AT 3
@@ -9,7 +9,7 @@ crypt \- encode/decode
 [ password ]
 .SH DESCRIPTION
 .ft B
-This interface is obsoleted by des(1).
+This interface is obsoleted by bdes(1).
 .ft R
 .PP
 .I Crypt
