--- a/usr.sbin/iostat/iostat.8
+++ b/usr.sbin/iostat/iostat.8
@@ -1,9 +1,9 @@
-.\" Copyright (c) 1985 The Regents of the University of California.
+.\" Copyright (c) 1985, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.proprietary.roff%
+.\" %sccs.include.redist.roff%
 .\"
-.\"	@(#)iostat.8	6.7 (Berkeley) 04/24/91
+.\"	@(#)iostat.8	6.8 (Berkeley) 04/24/91
 .\"
 .TH IOSTAT 8 ""
 .UC 4
