--- a/share/man/man3/stdarg.3
+++ b/share/man/man3/stdarg.3
@@ -3,13 +3,13 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)stdarg.3	6.5 (Berkeley) 04/19/91
+.\"     @(#)stdarg.3	6.6 (Berkeley) 04/24/91
 .\"
 .Dd 
-.Dt VARARGS 3
+.Dt STDARG 3
 .Os ATT 7th
 .Sh NAME
-.Nm varargs
+.Nm stdarg
 .Nd variable argument lists
 .Sh SYNOPSIS
 .Fd #include <stdarg.h>
