--- a/usr.bin/uucp/man5/L-dialcodes.5
+++ b/usr.bin/uucp/man5/L-dialcodes.5
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1986 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)L-dialcodes.5	6.1 (Berkeley) 04/24/86
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)L-dialcodes.5	6.2 (Berkeley) 04/24/91
 .\"
 .TH L-DIALCODES 5 ""
 .UC 6
