--- a/usr.bin/uucp/man5/USERFILE.5
+++ b/usr.bin/uucp/man5/USERFILE.5
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1986 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1986 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)USERFILE.5	6.2 (Berkeley) 06/23/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)USERFILE.5	6.3 (Berkeley) 04/24/91
 .\"
 .TH USERFILE 5 ""
 .UC 6
