--- a/usr.bin/uucp/uucp/uucp.1
+++ b/usr.bin/uucp/uucp/uucp.1
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1988 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1988 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)uucp.1	6.5 (Berkeley) 06/29/90
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)uucp.1	6.6 (Berkeley) 04/24/91
 .\"
 .TH UUCP 1 ""
 .AT 3
