--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)find.1	6.20 (Berkeley) 04/27/91
+.\"     @(#)find.1	6.21 (Berkeley) 04/27/91
 .\"
 .Vx
 .Vx
@@ -424,8 +424,11 @@ The standard syntax is also supported; see the COMPATIBILITY section
 below for details.
 .Pp
 The
-.Fl s
-option as well as the primaries
+.Fl r ,
+.Fl s ,
+and
+.Fl X
+options as well as the primaries
 .Ic inum
 and
 .Ic ls
