--- a/share/man/man5/dump.5
+++ b/share/man/man5/dump.5
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)dump.5	6.2 (Berkeley) 06/18/85
+.\"     %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)dump.5	6.3 (Berkeley) 04/29/91
 .\"
 .TH DUMP 5  ""
 .UC 4
