--- a/share/man/man5/plot.5
+++ b/share/man/man5/plot.5
@@ -1,4 +1,6 @@
-.\"	@(#)plot.5	6.2 (Berkeley) 04/25/87
+.\"	@(#)plot.5	6.3 (Berkeley) 04/29/91
+.\"
+.\"	%sccs.include.proprietary.roff%
 .\"
 .TH PLOT 5  ""
 .AT 3
