--- a/share/man/man5/utmp.5
+++ b/share/man/man5/utmp.5
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)utmp.5	6.6 (Berkeley) 06/23/90
+.\"	%sccs.include.proprietary.roff%
+.\"
+.\"	@(#)utmp.5	6.7 (Berkeley) 04/29/91
 .\"
 .TH UTMP 5  ""
 .UC 4
