--- a/lib/libc/sys/ptrace.2
+++ b/lib/libc/sys/ptrace.2
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)ptrace.2	6.4 (Berkeley) 05/23/86
+.\"     %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)ptrace.2	6.5 (Berkeley) 04/29/91
 .\"
 .TH PTRACE 2 ""
 .UC 4
