--- a/share/man/man3f/bit.3
+++ b/share/man/man3f/bit.3
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1983 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)bit.3	6.4 (Berkeley) 04/30/86
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)bit.3	6.5 (Berkeley) 04/30/91
 .\"
 .TH BIT 3F ""
 .UC 5
