--- a/share/man/man3f/fseek.3
+++ b/share/man/man3f/fseek.3
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1983 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)fseek.3	6.2 (Berkeley) 05/27/86
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)fseek.3	6.3 (Berkeley) 04/30/91
 .\"
 .TH FSEEK 3F ""
 .UC 5
