--- a/share/man/man3f/getcwd.3
+++ b/share/man/man3f/getcwd.3
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1983 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)getcwd.3	6.1 (Berkeley) 05/15/85
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)getcwd.3	6.2 (Berkeley) 04/30/91
 .\"
 .TH GETCWD 3F ""
 .UC 5
