--- a/share/man/man3f/random.3
+++ b/share/man/man3f/random.3
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1985 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1983 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)random.3	6.1 (Berkeley) 05/15/85
+.\" %sccs.include.proprietary.roff%
+.\"
+.\"	@(#)random.3	6.2 (Berkeley) 04/30/91
 .\"
 .TH RANDOM 3F ""
 .UC 6
