--- a/old/dbx/dbx.5.5
+++ b/old/dbx/dbx.5.5
@@ -1,8 +1,9 @@
-.\" Copyright (c) 1985 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" Copyright (c) 1985 The Regents of the University of California.
+.\" All rights reserved.
 .\"
-.\"	@(#)dbx.5.5	6.2 (Berkeley) 01/12/86
+.\" %sccs.include.redist.roff%
+.\"
+.\"	@(#)dbx.5.5	6.3 (Berkeley) 04/30/91
 .\"
 .TH DBX 5 ""
 .UC 6
