--- a/share/man/man7/mdoc.samples.7
+++ b/share/man/man7/mdoc.samples.7
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.mdoc%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)mdoc.samples.7	5.4 (Berkeley) 05/01/91
+.\"     @(#)mdoc.samples.7	5.5 (Berkeley) 05/01/91
 .\"
 .\"	This sampler invokes every macro in the package several
 .\" 	times and is garanteed to give a worst case performance
