--- a/lib/libc/sys/getsockopt.2
+++ b/lib/libc/sys/getsockopt.2
@@ -3,14 +3,14 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)getsockopt.2	6.8 (Berkeley) 04/13/91
+.\"     @(#)getsockopt.2	6.9 (Berkeley) 05/01/91
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)getsockopt.2	6.8 (Berkeley) 04/13/91
+.\"     @(#)getsockopt.2	6.9 (Berkeley) 05/01/91
 .\"
 .Dd 
 .Dt GETSOCKOPT 2
@@ -23,9 +23,9 @@
 .Fd #include <sys/types.h>
 .Fd #include <sys/socket.h>
 .Ft int
-.Fn getsockopt "int s" "int level" "int optname" "char *optval" "int *optlen"
+.Fn getsockopt "int s" "int level" "int optname" "void *optval" "int *optlen"
 .Ft int
-.Fn setsockopt "int s" "int level" "int optname" "char *optval" "int optlen"
+.Fn setsockopt "int s" "int level" "int optname" "const void *optval" "int optlen"
 .Sh DESCRIPTION
 .Fn Getsockopt
 and
