--- a/lib/libc/stdlib/malloc.3
+++ b/lib/libc/stdlib/malloc.3
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)malloc.3	6.5 (Berkeley) 04/19/91
+.\"     @(#)malloc.3	6.6 (Berkeley) 05/01/91
 .\"
 .Dd 
 .Dt MALLOC 3
@@ -39,7 +39,7 @@ a pointer to the allocated space if successful; otherwise
 a null pointer is returned.
 .Sh SEE ALSO
 .Xr brk 2 ,
-.Xr pagesize 2
+.Xr pagesize 2 ,
 .Xr free 3 ,
 .Xr calloc 3 ,
 .Xr alloca 3 ,
