--- a/share/man/man5/printcap.5
+++ b/share/man/man5/printcap.5
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)printcap.5	6.4 (Berkeley) 05/14/86
+.\"	%sccs.include.redist.roff%
+.\"
+.\"	@(#)printcap.5	6.5 (Berkeley) 05/02/91
 .\"
 .TH PRINTCAP 5 ""
 .UC 5
