--- a/share/man/man5/remote.5
+++ b/share/man/man5/remote.5
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1983 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved. 
 .\"
-.\"	@(#)remote.5	6.1 (Berkeley) 05/15/85
+.\"     %sccs.include.redist.roff%
+.\"
+.\"	@(#)remote.5	6.2 (Berkeley) 05/02/91
 .\"
 .TH REMOTE 5 ""
 .UC 5
