--- a/share/man/man5/stab.5
+++ b/share/man/man5/stab.5
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)stab.5	6.3 (Berkeley) 05/19/86
+.\"     %sccs.include.redist.roff%
+.\"
+.\"	@(#)stab.5	6.4 (Berkeley) 05/02/91
 .\"
 .TH STAB 5 ""
 .UC 4
