--- a/lib/libc/gmon/moncontrol.3
+++ b/lib/libc/gmon/moncontrol.3
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)moncontrol.3	6.1 (Berkeley) 05/15/85
+.\"	%sccs.include.proprietary.roff%
+.\"
+.\"	@(#)moncontrol.3	6.2 (Berkeley) 05/04/91
 .\"
 .TH MONITOR 3  ""
 .UC 4
