--- a/sbin/clri/clri.8
+++ b/sbin/clri/clri.8
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)clri.8	6.1 (Berkeley) 04/27/85
+.\"	%sccs.include.proprietary.roff%
+.\"
+.\"	@(#)clri.8	6.2 (Berkeley) 05/04/91
 .\"
 .TH CLRI 8 ""
 .UC 4
