--- a/lib/libplot/plot/plot.3
+++ b/lib/libplot/plot/plot.3
@@ -1,4 +1,9 @@
-.\"	@(#)plot.3	6.3 (Berkeley) 11/24/87
+.\" Copyright (c) 1986 Regents of the University of California.
+.\" All rights reserved.
+.\"
+.\"	%sccs.include.proprietary.roff%
+.\"
+.\"	@(#)plot.3	6.4 (Berkeley) 05/04/91
 .\"
 .TH PLOT 3 ""
 .AT 3
