--- a/usr.sbin/sa/sa.8
+++ b/usr.sbin/sa/sa.8
@@ -1,8 +1,9 @@
 .\" Copyright (c) 1980 Regents of the University of California.
-.\" All rights reserved.  The Berkeley software License Agreement
-.\" specifies the terms and conditions for redistribution.
+.\" All rights reserved.
 .\"
-.\"	@(#)sa.8	6.3 (Berkeley) 06/24/90
+.\"	%sccs.include.proprietary.roff%
+.\"
+.\"	@(#)sa.8	6.4 (Berkeley) 05/04/91
 .\"
 .TH SA 8 ""
 .UC 4
