--- a/lib/libm/common_source/acosh.3
+++ b/lib/libm/common_source/acosh.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)acosh.3	5.1 (Berkeley) 05/02/91
+.\"     @(#)acosh.3	5.2 (Berkeley) 05/06/91
 .\"
 .Dd 
 .Dt ACOSH 3
@@ -48,9 +48,6 @@ causes a reserved operand fault.
 .Xr exp 3 ,
 .Xr infnan 3
 .Xr math 3 ,
-.Sh AUTHOR
-.An W. Kahan ,
-.An Kwok\-Choi Ng
 .Sh HISTORY
 The
 .Fn acosh
