--- a/lib/libm/common_source/asinh.3
+++ b/lib/libm/common_source/asinh.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)asinh.3	6.3 (Berkeley) 04/19/91
+.\"     @(#)asinh.3	6.4 (Berkeley) 05/06/91
 .\"
 .Dd 
 .Dt ASINH 3
@@ -36,9 +36,6 @@ returns the inverse hyperbolic sine of
 .Xr exp 3 ,
 .Xr infnan 3
 .Xr math 3 ,
-.Sh AUTHOR
-.An W. Kahan ,
-.An Kwok\-Choi Ng
 .Sh HISTORY
 The
 .Fn asinh
