--- a/lib/libm/common_source/atanh.3
+++ b/lib/libm/common_source/atanh.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)atanh.3	5.1 (Berkeley) 05/02/91
+.\"     @(#)atanh.3	5.2 (Berkeley) 05/06/91
 .\"
 .Dd 
 .Dt ATANH 3
@@ -50,9 +50,6 @@ a reserved operand fault is generated.
 .Xr exp 3 ,
 .Xr infnan 3
 .Xr math 3 ,
-.Sh AUTHOR
-.An W. Kahan ,
-.An Kwok\-Choi Ng
 .Sh HISTORY
 The
 .Fn atanh
