--- a/lib/libm/common_source/ieee.3
+++ b/lib/libm/common_source/ieee.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)ieee.3	6.3 (Berkeley) 04/19/91
+.\"     @(#)ieee.3	6.4 (Berkeley) 05/06/91
 .\"
 .Dd 
 .Dt IEEE 3
@@ -170,8 +170,6 @@ to
 .Xr floor 3 ,
 .Xr math 3 ,
 .Xr infnan 3
-.Sh AUTHOR
-Kwok\-Choi Ng
 .Sh HISTORY
 The
 .Nm ieee
