--- a/lib/libm/common_source/sqrt.3
+++ b/lib/libm/common_source/sqrt.3
@@ -1,9 +1,9 @@
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
-.\" %sccs.include.redist.man%
+.\" %sccs.include.redist.roff%
 .\"
-.\"     @(#)sqrt.3	6.3 (Berkeley) 04/19/91
+.\"     @(#)sqrt.3	6.4 (Berkeley) 05/06/91
 .\"
 .Dd 
 .Dt SQRT 3
@@ -82,8 +82,6 @@ carried.
 .Sh SEE ALSO
 .Xr math 3 ,
 .Xr infnan 3
-.Sh AUTHOR
-.An W. Kahan
 .Sh STANDARDS
 The
 .Nm sqrt
