--- a/usr.bin/calendar/calendar.1
+++ b/usr.bin/calendar/calendar.1
@@ -3,7 +3,7 @@
 .\"
 .\" %sccs.include.redist.man%
 .\"
-.\"     @(#)calendar.1	6.11 (Berkeley) 03/14/91
+.\"     @(#)calendar.1	6.12 (Berkeley) 05/14/91
 .\"
 .Dd 
 .Dt CALENDAR 1
@@ -56,7 +56,7 @@ Empty lines and lines protected by the C commenting syntax
 are ignored.
 .Pp
 Some possible calendar entries:
-.Bd -ragged -offset indent
+.Bd -unfilled -offset indent
 #include	<calendar.usholiday>
 #include	<calendar.birthday>
 
